test/failing/badellipsis.trunnel

struct x {

   u8 a;
   union u[a] {
     3 : u16 y ...;
     4 : u32 z;
   };
}